--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" 
-      type="image/png" 
-      href="assets/logosmall.png">
+    <link rel="icon" type="image/png" href="assets/logosmall.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -238,7 +236,7 @@
                         <div class="card project-card" data-bs-toggle="modal" data-bs-target="#modal3">
                             <div>
                                 <img src="assets/P3/herop32.png" class="card-img-top img-fluid project-card-img"
-                                alt="hero p1">
+                                    alt="hero p1">
                             </div>
                             <div class="card-body d-flex mt-2 mt-md-3 p-2 px-md-0">
                                 <div class="col-md-12 col-12">
@@ -669,15 +667,15 @@
                             </div>
                         </div>
 
-                        <div class="container-fluid h1-modal bg-color-beige section5-p2" id="assetsp2">
+                        <div class="container-fluid h1-modal bg-color-beige section5-p2" style="height: auto;" id="assetsp2">
                             <div class="row p-md-5 p-4 p-xl-0 p-xl-5 align-items-end">
-                                <div class="col-4 col-xl-5">
+                                <div class="col-12 col-xl-5">
                                     <h3 class="color-violetp2 py-3 px-xl-5">Personajes de apoyo</h3>
                                     <p class="color-violetp2 px-xl-5">Conceptualizados basados en la cultura juveníl,
                                         tierna y amigable. Cada uno de estos personajes representa los diversos sabores
                                         que la marca Bubble Panda ofrece.</p>
                                 </div>
-                                <div class="col-7 col-xl-7">
+                                <div class="col-12 col-xl-7">
                                     <img src="assets/P2/personajes.png" alt="abecedario mishi sans" class="img-fluid">
                                 </div>
                             </div>
@@ -794,17 +792,20 @@
 
                             <div
                                 class="row p-md-5 p-3 p-xl-0 p-xl-5 bg-color-beige justify-content-center align-items-center">
-                                <h3 class="color-blackp3 pb-3 pt-xl-0 ps-xl-5 pb-xl-5 py-xl-3" id="bocetosp3">Bocetos</h3>
+                                <h3 class="color-blackp3 pb-3 pt-xl-0 ps-xl-5 pb-xl-5 py-xl-3" id="bocetosp3">Bocetos
+                                </h3>
 
                                 <div class="col-6 col-xl-5 px-xl-3">
                                     <img src="assets/P3/bocetop31.png" alt="anatomia mishi san"
                                         class="img-fluid py-3 py-xl-0">
                                 </div>
                                 <div class="col-6 col-xl-5 px-xl-3 align-self-start">
-                                    <p class="color-blackp3 py-xl-5">Bocetos del sitio web en sus diferentes versiones con respecto a los viewports.</p>
+                                    <p class="color-blackp3 py-xl-5">Bocetos del sitio web en sus diferentes versiones
+                                        con respecto a los viewports.</p>
                                     <img src="assets/P3/bocetop32.png" alt="anatomia mishi san"
                                         class="img-fluid py-3 py-xl-0">
-                                    <p class="color-blackp3 py-xl-5">Se utilizó Bootstrap para la responsividad de los elementos.</p>
+                                    <p class="color-blackp3 py-xl-5">Se utilizó Bootstrap para la responsividad de los
+                                        elementos.</p>
                                 </div>
                             </div>
                         </div>
@@ -949,18 +950,24 @@
 
                                 <div class="col col-md-8 col-xl-6 px-xl-5">
                                     <h3 class="text-white pb-3 pt-xl-0 pb-xl-0 py-xl-3">Historia</h3>
-                                    <p class="text-white">Los personajes serán mellizos huérfanos pertenecientes a una banda de
-                                        música regional mexicana, la cual iniciará tocando los géneros de banda sinaloense
+                                    <p class="text-white">Los personajes serán mellizos huérfanos pertenecientes a una
+                                        banda de
+                                        música regional mexicana, la cual iniciará tocando los géneros de banda
+                                        sinaloense
                                         y norteña.</p>
-                                    <p class="text-white">Ambos personajes tendrán poderes provenientes de la manipulación del
-                                        sonido y utilizarán sus habilidades para su beneficio propio a lo largo de su vida,
+                                    <p class="text-white">Ambos personajes tendrán poderes provenientes de la
+                                        manipulación del
+                                        sonido y utilizarán sus habilidades para su beneficio propio a lo largo de su
+                                        vida,
                                         además de darle una mezcla moderna, juvenil y atractiva a su música.</p>
                                 </div>
 
                                 <div class="col col-md-8 col-xl-6 offset-md-4 offset-xl-6 px-xl-5">
-                            
-                                    <p class="text-white">Para cumplir con todos los motivos expuestos anteriormente, se diseñarán
-                                        dos personajes basados en un concepto de física, describiendo sus características,
+
+                                    <p class="text-white">Para cumplir con todos los motivos expuestos anteriormente, se
+                                        diseñarán
+                                        dos personajes basados en un concepto de física, describiendo sus
+                                        características,
                                         funcionalidad, y contextos.</p>
                                 </div>
                             </div>
@@ -993,7 +1000,8 @@
                             <div class="row p-md-5 p-3 p-xl-0 p-xl-5 justify-content-center align-items-center">
                                 <div class="col-8 col-md-8 col-xl-6 px-xl-5">
                                     <h3 class="text-white pb-3 pt-xl-0 pb-xl-0 py-xl-3">Micrófono</h3>
-                                    <p class="text-white">Valentín posee un micrófono, que aunque tiene el poder de manipular el
+                                    <p class="text-white">Valentín posee un micrófono, que aunque tiene el poder de
+                                        manipular el
                                         volumen de su voz, el personaje lo utiliza para pasar desapercibido, pero cuando
                                         sus poderes son descubiertos, aún lo sigue usando como accesorio.</p>
                                 </div>
@@ -1021,7 +1029,8 @@
                             <div class="row p-md-5 p-3 p-xl-0 p-xl-5 align-items-center">
                                 <div class="col-8 col-md-8 col-xl-6 px-xl-5">
                                     <h3 class="color-blackp4 pb-3 pt-xl-0 pb-xl-0 py-xl-3">Lucy</h3>
-                                    <p class="color-blackp4">El usuario es capaz de manipular libremente el sonido mediante un instrumento
+                                    <p class="color-blackp4">El usuario es capaz de manipular libremente el sonido
+                                        mediante un instrumento
                                         para producir música. Puede oír sonidos no antes escuchados por el hombre y
                                         posee la habilidad del oído absoluto, con la cual es capaz de identificar notas
                                         musicales con facilidad.</p>
@@ -1042,7 +1051,8 @@
                             <div class="row p-md-5 p-3 p-xl-0 p-xl-5 align-items-center">
                                 <div class="col-8 col-md-8 col-xl-6 px-xl-5">
                                     <h3 class="text-white pb-3 pt-xl-0 pb-xl-0 py-xl-3">Instrumento</h3>
-                                    <p class="text-white">El personaje tendrá un instrumento de viento, similar a la tuba o trompeta.
+                                    <p class="text-white">El personaje tendrá un instrumento de viento, similar a la
+                                        tuba o trompeta.
                                         Los instrumentos de viento, se reconocen por ser capaces de reproducir sonidos a
                                         partir de una masa de aire que los atraviesa. Esta masa o columna de aire está
                                         compuesta por partículas de aire que vibran dentro del tubo del instrumento
