--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
 
                             <div class="row bg-color-blackp4 p-3 px-md-5 p-0 px-xl-5 pt-xl-5">
 
-                                <div class="col-7 col-lg-10 col-md-9 pt-0 col-xl-7 px-xl-5 pt-xl-5">
+                                <div class="col-10 col-lg-10 col-md-9 pt-0 col-xl-7 px-xl-5 pt-xl-5">
                                     <h2 class="text-white">Diseño de personaje y Animación</h2>
                                 </div>
 
@@ -948,7 +948,7 @@
 
                             <div class="row bg-color-blackp4 px-md-5 p-3 pt-3 p-0 py-xl-5 px-xl-5">
 
-                                <div class="col col-md-8 col-xl-6 px-xl-5">
+                                <div class="col-12 col-md-8 col-xl-6 px-xl-5">
                                     <h3 class="text-white pb-3 pt-xl-0 pb-xl-0 py-xl-3">Historia</h3>
                                     <p class="text-white">Los personajes serán mellizos huérfanos pertenecientes a una
                                         banda de
@@ -962,7 +962,7 @@
                                         además de darle una mezcla moderna, juvenil y atractiva a su música.</p>
                                 </div>
 
-                                <div class="col col-md-8 col-xl-6 offset-md-4 offset-xl-6 px-xl-5">
+                                <div class="col-12 col-md-8 col-xl-6 offset-md-4 offset-xl-6 px-xl-5">
 
                                     <p class="text-white">Para cumplir con todos los motivos expuestos anteriormente, se
                                         diseñarán
@@ -976,7 +976,7 @@
 
                         <div class="container-fluid h1-modal bg-color-white section3-p1" id="bocetoval">
                             <div class="row p-md-5 p-3 p-xl-0 p-xl-5 align-items-center">
-                                <div class="col-8 col-md-8 col-xl-6 px-xl-5">
+                                <div class="col-12 col-md-8 col-xl-6 px-xl-5">
                                     <h3 class="color-blackp4 pb-3 pt-xl-0 pb-xl-0 py-xl-3">Val</h3>
                                     <p class="color-blackp4">El usuario es capaz de manipular
                                         libremente su voz, permitiéndole imitar otros sonidos de personas, ruidos de
@@ -985,7 +985,7 @@
                                         ilusiones que son capaces de engañar a la realidad. </p>
                                 </div>
 
-                                <div class="col-4 col-xl-6">
+                                <div class="col-12 col-xl-6">
                                     <img src="assets/P4/bocetosval.png" alt="anatomia mishi san"
                                         class="img-fluid py-3 py-xl-0">
                                 </div>
@@ -1027,7 +1027,7 @@
 
                         <div class="container-fluid h1-modal bg-color-white section3-p1" id="bocetolucy">
                             <div class="row p-md-5 p-3 p-xl-0 p-xl-5 align-items-center">
-                                <div class="col-8 col-md-8 col-xl-6 px-xl-5">
+                                <div class="col-12 col-md-8 col-xl-6 px-xl-5">
                                     <h3 class="color-blackp4 pb-3 pt-xl-0 pb-xl-0 py-xl-3">Lucy</h3>
                                     <p class="color-blackp4">El usuario es capaz de manipular libremente el sonido
                                         mediante un instrumento
@@ -1036,7 +1036,7 @@
                                         musicales con facilidad.</p>
                                 </div>
 
-                                <div class="col-4 col-xl-6">
+                                <div class="col-12 col-xl-6">
                                     <img src="assets/P4/bocetoslucy.png" alt="anatomia mishi san"
                                         class="img-fluid py-3 py-xl-0">
                                 </div>
@@ -1049,7 +1049,7 @@
 
                         <div class="container-fluid h1-modal bg-color-blackp4 section3-p1">
                             <div class="row p-md-5 p-3 p-xl-0 p-xl-5 align-items-center">
-                                <div class="col-8 col-md-8 col-xl-6 px-xl-5">
+                                <div class="col-12 col-md-8 col-xl-6 px-xl-5">
                                     <h3 class="text-white pb-3 pt-xl-0 pb-xl-0 py-xl-3">Instrumento</h3>
                                     <p class="text-white">El personaje tendrá un instrumento de viento, similar a la
                                         tuba o trompeta.
@@ -1059,7 +1059,7 @@
                                         generando ondas con una longitud determinada.</p>
                                 </div>
 
-                                <div class="col-4 col-xl-6">
+                                <div class="col-12 col-xl-6">
                                     <img src="assets/P4/instrumento2.png" alt="anatomia mishi san"
                                         class="img-fluid py-3 py-xl-0">
                                 </div>
@@ -1089,7 +1089,7 @@
                         <div class="container-fluid h1-modal bg-color-blackp4 section3-p1" id="anatomiap1">
                             <div class="row p-md-5 p-3 p-xl-0 p-xl-5 justify-content-center align-items-center">
                                 <iframe src="https://drive.google.com/file/d/1o4ZKlxYQJluPS3Dza6fskg88k_mGxxK3/preview"
-                                    width="640" height="480" class="mx-auto" allow="autoplay"></iframe>
+                                   class="mx-auto" allow="autoplay"></iframe>
                             </div>
                         </div>
 
@@ -1097,9 +1097,6 @@
                     </div>
 
                     <div class="modal-footer text-center">
-                        <div class="col-12">
-                            <p class="text-white py-2 m-0  pt-xl-4 text-center">Compartir</p>
-                        </div>
 
                         <div class="col-4 col-xl-2 mx-auto text-center d-flex justify-content-between">
 
