--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         </div>
                     </div>
 
-                    <div class="col-7 col-md-8 col-lg-6 ms-lg-5 align-self-end">
+                    <div class="col-12 col-md-8 col-lg-6 ms-lg-5 align-self-end">
                         <img src="assets/about.png" class="img-fluid about" alt="ymisshie">
                     </div>
                 </div>
@@ -616,10 +616,10 @@
                             </div>
 
                             <div class="row px-md-5 p-3 pt-3 p-0 px-xl-5">
-                                <div class="col col-md-4 col-xl-6 px-xl-5">
+                                <div class="col-12 col-md-4 col-xl-6 px-xl-5">
                                     <img src="assets/P2/bocetosp2.png" alt="bocetos" class="img-fluid p-0">
                                 </div>
-                                <div class="col col-md-8 col-xl-6 px-xl-5 align-self-center">
+                                <div class="col-12 col-md-8 col-xl-6 px-xl-5 align-self-center">
                                     <h3 class="color-violetp2 pb-3 pt-xl-0 pb-xl-0 py-xl-3">Descripción</h3>
                                     <p class="color-violetp2">Desarrollo de identidad visual, imagotipo, personajes de
                                         apoyo y menú digital para la marca juveníl emergente de Bubble Tea, Bubble Panda
@@ -667,7 +667,8 @@
                             </div>
                         </div>
 
-                        <div class="container-fluid h1-modal bg-color-beige section5-p2" style="height: auto;" id="assetsp2">
+                        <div class="container-fluid h1-modal bg-color-beige section5-p2" style="height: auto;"
+                            id="assetsp2">
                             <div class="row p-md-5 p-4 p-xl-0 p-xl-5 align-items-end">
                                 <div class="col-12 col-xl-5">
                                     <h3 class="color-violetp2 py-3 px-xl-5">Personajes de apoyo</h3>
@@ -728,26 +729,27 @@
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarSupportedContent3" aria-controls="navbarSupportedContent3"
                                 aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
+                                <span class="navbar-toggler-icon">
+                                    <i class="fas fa-bars"></i>
+                                </span>
                             </button>
-
                             <div class="collapse navbar-collapse" id="navbarSupportedContent3">
                                 <ul class="navbar-nav mb-2 mb-lg-0">
                                     <li class="nav-item mx-3">
-                                        <a class="nav-link active modal-category" aria-current="page"
+                                        <a class="nav-link px-3 px-xl-3 active modal-category" aria-current="page"
                                             href="#iniciop3">Diseño Web</a>
                                     </li>
                                     <li class="nav-item mx-3">
-                                        <a class="nav-link" href="#bocetosp3">Bocetos</a>
+                                        <a class="nav-link px-3 px-xl-3" href="#bocetosp3">Bocetos</a>
                                     </li>
                                     <li class="nav-item mx-3">
-                                        <a class="nav-link" href="#webp3">Versión Web</a>
+                                        <a class="nav-link px-3 px-xl-3" href="#webp3">Versión Web</a>
                                     </li>
                                     <li class="nav-item mx-3">
-                                        <a class="nav-link" href="#movilp3">Versión Móvil</a>
+                                        <a class="nav-link px-3 px-xl-3" href="#movilp3">Versión Móvil</a>
                                     </li>
                                     <li class="nav-item mx-3">
-                                        <a class="nav-link" href="#mockupsp3">Mockups</a>
+                                        <a class="nav-link px-3 px-xl-3" href="#mockupsp3">Mockups</a>
                                     </li>
                                 </ul>
                             </div>
@@ -865,7 +867,7 @@
                         </div>
 
                         <div class="col-12">
-                            <button type="button" class="btn btn-primary color-bluep3 my-2 my-xl-3"
+                            <button type="button" class="align-self-start pt-5 btn-close me-4"
                                 data-bs-dismiss="modal">Cerrar</button>
                         </div>
 
@@ -1089,7 +1091,7 @@
                         <div class="container-fluid h1-modal bg-color-blackp4 section3-p1" id="anatomiap1">
                             <div class="row p-md-5 p-3 p-xl-0 p-xl-5 justify-content-center align-items-center">
                                 <iframe src="https://drive.google.com/file/d/1o4ZKlxYQJluPS3Dza6fskg88k_mGxxK3/preview"
-                                   class="mx-auto" allow="autoplay"></iframe>
+                                    class="mx-auto" allow="autoplay"></iframe>
                             </div>
                         </div>
 
