--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <h3 class="color-violet py-3 py-md-3">Habilidades</h3>
 
 
-                        <ul class="color-purple px-5 px-md-3">
+                        <ul class="color-purple  px-md-3">
                             <li>
                                 <p class="color-purple m-0">Fotografía, videografía y edición</p>
                             </li>
