--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
 
                                 <div class="col-12 col-md-8 col-xl-6 px-xl-5">
                                     <h3 class="text-white pb-3 pt-xl-0 pb-xl-0 py-xl-3">Historia</h3>
-                                    <p class="text-white">Los personajes serán mellizos huérfanos pertenecientes a una
+                                    <p class="text-white">Desarrollado junto con <b>Elena Soto</b>. Los personajes serán mellizos huérfanos pertenecientes a una
                                         banda de
                                         música regional mexicana, la cual iniciará tocando los géneros de banda
                                         sinaloense
@@ -964,15 +964,6 @@
                                         además de darle una mezcla moderna, juvenil y atractiva a su música.</p>
                                 </div>
 
-                                <div class="col-12 col-md-8 col-xl-6 offset-md-4 offset-xl-6 px-xl-5">
-
-                                    <p class="text-white">Para cumplir con todos los motivos expuestos anteriormente, se
-                                        diseñarán
-                                        dos personajes basados en un concepto de física, describiendo sus
-                                        características,
-                                        funcionalidad, y contextos.</p>
-                                </div>
-                            </div>
 
                         </div>
 
