--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
                         <div class="container-fluid h1-modal bg-color-blackp4 section3-p1" id="anatomiap1">
                             <div class="row p-md-5 p-3 p-xl-0 p-xl-5 justify-content-center align-items-center">
                                 <iframe src="https://drive.google.com/file/d/1o4ZKlxYQJluPS3Dza6fskg88k_mGxxK3/preview"
-                                    class="mx-auto" allow="autoplay"></iframe>
+                                    class="mx-auto" height="480" allow="autoplay"></iframe>
                             </div>
                         </div>
 
